// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jumbo-cell should render correctly with all props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginLeft": 16,
          "marginTop": 59,
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Image
          source={1}
          style={undefined}
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "lineHeight": 38,
            "marginLeft": 12,
            "marginRight": 12,
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      foo
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "marginBottom": 25,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 10,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "borderTopWidth": 0.5,
            "bottom": 0,
            "left": 12,
            "position": "absolute",
            "right": 12,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`jumbo-cell should render correctly without props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginLeft": 16,
          "marginTop": 59,
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Image
          source={1}
          style={undefined}
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Array [
          Object {
            "lineHeight": 38,
            "marginLeft": 12,
            "marginRight": 12,
            "textAlign": "left",
          },
          undefined,
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "marginBottom": 25,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 10,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "borderTopWidth": 0.5,
            "bottom": 0,
            "left": 12,
            "position": "absolute",
            "right": 12,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
